gcc/testsuite/rust/compile/issue-3671.rs
impl Self<0> {}
// { dg-error "could not resolve type path" "" { target *-*-* } .-1 }
